fix deck spacing

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -63,7 +63,7 @@
 }
 
 .deck-card {
-  margin: -35px;
+  margin: -33px;
 }
 
 .pile-card {
